# py-ecg-monitor

./: License  README.md  ecg.py  main.py  plot.py  pyproject.toml  requirements.txt  ring_buffer.py
code/: config.py  pipeline.py  threads.py  utils.py
demo/: ECG_Demo.md
src/: main.cpp
