[project]
name = "py-ecg-monitor"
version = "0.1.0"
description = "Implementation of a Real-time ECG signal processing using python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "psutil>=7.1.3",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "pyside6>=6.10.1",
]
